--- a/github.html
+++ b/github.html
@@ -13,6 +13,20 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_b9bhQvHAJr87v1vRDZ0oF");
+      emailjs.send("gmail", "blank", {name: "Jochen", notes: "The project that I want is..."})
+   })();
+</script>
+
+
+
+
 </head>
 
 <body>
